--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
     </section>
     <section class="intro">
       <div>
-        <span>Meet Ducky</span>
+        <span>Who is Ducky ?</span>
         <span
-          >Ducky was inspired by Jason furie, Matt Furie's brother. It was also
-          his most beloved drawing and character that appeared in Boys Club
-          collection long time ago.</span
+          >Ducky was created by Jason Furie back in 2013, Matt Furie's brother.
+          <span class="redred">Jason kickstarted the fundraising to bring Pepe back alive together
+            with Matt after Matt decided to kill it off.</span>
+           Safe to say Jason was the
+          person who resurrected the infamous Pepe meme we now know.</span
         >
       </div>
       <img src="./background.jpg" alt="" srcset="" />
     </section>
     <section class="body">
       <div>
-        <span>Fancy Ducky's wonderful sketches</span>
+        <span>In his sketches, Ducky is the most dominant, it's a crocodile duck that loves pizzas.</span>
       </div>
       <div>
         <img src="./1.PNG" alt="" srcset="" class="img_change" />
