--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <span>Ducky</span>
         <span>Welcome to Ducky gallery</span>
         <div class="socials">
-          <a href="" target="_blank">
+          <a href="https://t.me/duckyfurie" target="_blank">
             <img
               src="./Telegram_2019_Logo.svg-removebg-preview.png"
               alt="Telegram"
             />
           </a>
-          <a href="" target="_blank">
+          <a href="https://x.com/duckyfurie" target="_blank">
             <img src="./EmT4yP6S_400x400-removebg-preview.png" alt="Twitter" />
           </a>
-          <a href="" target="_blank">
+          <a href="https://t.me/duckyfurie" target="_blank">
             <img src="./dexx.png" alt="Dex" />
           </a>
         </div>
