--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <span>Who is Ducky ?</span>
         <span
           >Ducky was created by Jason Furie back in 2013, Matt Furie's brother.
-          <span class="redred">Jason kickstarted the fundraising to bring Pepe back alive together
-            with Matt after Matt decided to kill it off.</span>
+          <span class="redred">Jason kickstarted the fundraising together
+            with Matt Furie after Matt decided to kill it off.</span>
            Safe to say Jason was the
           person who resurrected the infamous Pepe meme we now know.</span
         >
