--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <img src="./7-removebg-preview.png" alt="" srcset="" />
     </section>
     <section class="footer">
-      <span>CA: Coming soon</span>
+      <span>CA: DTJdyNnbKaxM148h6XEeXJfvbQ4zZCtpRbZWinLkpump</span>
     </section>
     <section class="intro">
       <div>
